# s_r_tab

./: .gitignore  AUTHORS  ChangeLog  README  README.adoc  clean.sh  configure.ac  reconf.sh
src/: Makefile.am  buffer.c  buffer.h  common.h  console.c  console.h  extension.c  extension.h  parser.c  parser.h  process.c  process.h  replace.c  replace.h  s_r_tab.c  s_r_tab.h  scanner.c  scanner.h  search-simple.c  search-simple.h  search-verbose.c  search-verbose.h  search.c  search.h  usage.c  usage.h
