
AC_PREREQ([2.69])
AC_INIT([s_r_tab], [1.16.0-dev], [denis.chancogne@free.fr])
AC_CONFIG_SRCDIR([src/s_r_tab.c])
AC_CONFIG_HEADERS([src/config.h])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([stdlib.h string.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_FUNC_MALLOC

AC_CONFIG_FILES([Makefile src/Makefile])

AC_OUTPUT
